@@ -4,7 +4,6 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -30,7 +29,7 @@ public class FreeMarkerController {
 
     @RequestMapping("helloTestFtl")
     public String helloTestFtl(Model model) {
-        List<Employer> emps = Arrays.asList(new Employer(1, "小李", 22), new Employer(2, "八戒", 444),
+        List<Employer> emps = List.of(new Employer(1, "小李", 22), new Employer(2, "八戒", 444),
                 new Employer(3, "刘德华", 54));
         model.addAttribute("emps", emps);
         return "helloTestFtl";
