@@ -2,8 +2,6 @@ package jar.freemarker;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -16,29 +14,30 @@ public class FreeMarkerDemo {
 
     @Test
     public void test01() {
-        test("01.ftl", "test01.ftl");
+        this.test("01.ftl", "test01.ftl");
     }
 
     @Test
     public void test02() {
-        test("01.htm", "test02.htm");
+        this.test("01.htm", "test02.htm");
     }
 
     @Test
     public void test03() {
-        test("01.jsp", "test03.jsp");
+        this.test("01.jsp", "test03.jsp");
     }
 
     private void test(String fName, String outPath) {
         Employer emp = new Employer(1, "张三", 18);
-        List<Employer> empList = Arrays.asList(
+        List<Employer> empList = List.of(
                 new Employer(1, "张三", 18),
                 new Employer(2, "李四", 20),
                 new Employer(3, "王五", 22));
-        Map<String, Object> params = new HashMap<>();
-        params.put("username", "小张");
-        params.put("emp", emp);
-        params.put("empList", empList);
+        Map<String, Object> params = Map.of(
+                "username", "小张",
+                "emp", emp,
+                "empList", empList
+        );
         util.sPrint(params, fName);
         util.fPrint(params, fName, "T:/" + outPath);
     }
